# conda-rpms

./: .gitignore  Dockerfile  README.md  dev-env.yml  pyproject.toml  setup.cfg
src/conda_rpms/: build.py  conda_compat.py  generate.py  logger.py  sign.py
src/conda_rpms/templates/: env.spec.template  pkg.spec.template
tests/unit/: test_build.py  test_lockfile.py
