[metadata]
name = conda_rpms
license = BSD 3-Clause License
keywords = conda, rpm
version = attr: conda_rpms.__version__

[options]
packages=find:
package_dir=
    =src
install_requires=
    jinja2
    ensureconda
    conda_package_handling

[options.extras_require]
test = pytest; mock; pytest-cov

[options.packages.find]
where = src